--- a/Styles/dialog.css
+++ b/Styles/dialog.css
@@ -26,8 +26,8 @@
 }
 #inputMessage{
     margin: 5px 0 5px 10px;
-    width: 265px;
+    width: 80%;
 }
 #sendButton{
-    margin: 5px;
+    margin: 8px;
 }
