--- a/Styles/settings.css
+++ b/Styles/settings.css
@@ -18,7 +18,7 @@
     position: relative;
     max-height: 330px;
     z-index: 1;
-    margin: 30px 15px;
+    /*margin: 30px 15px;*/
     background-color: white;
     box-shadow: 0 0 17px -7px rgba(34, 60, 80, 0.2);
 }
@@ -26,14 +26,14 @@
     visibility: visible;
     opacity: 1;
 }
-.upSpace.setting{
+.upSpace.mdl{
+    width: auto;
     border: 0;
 }
-.nameForm{
+.form{
     padding: 10px;
-    width: 100%;
 }
 .input{
     width: 80%;
-    margin-right: 10px;
+    margin: 5px 0;
 }
